Update the look and feel of list pages

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -20,7 +20,7 @@
 
 {{ end }}
 
-<div class="p-strip is-wrapper posts">
+<div class="p-strip is-wrapper posts posts--snazzy">
     <div class="row">
         {{ range (.Paginate $pages).Pages }}
 
