--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -8,7 +8,7 @@
 </header>
 
 <section class="p-strip is-shallow">
-    <main class="row post-content">
+    <main class="post-content">
         {{ .Content }}
     </main>
 </section>
