--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -6,3 +6,4 @@ $font-monospace: '"SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier,
 @import "node_modules/vanilla-framework/scss/build";
 @import "post-content";
 @import "custom";
+@import "print";
